2020-05-09  Jose E. Marchesi  <jemarch@gnu.org>

	* New ChangeLog.